@@ -230,6 +230,14 @@ start_time INT UNSIGNED NOT NULL ,
 PRIMARY KEY (moldable_job_id)
 );
 
+#DROP TABLE IF EXISTS gantt_jobs_predictions_log;
+CREATE TABLE IF NOT EXISTS gantt_jobs_predictions_log (
+sched_date INT UNSIGNED NOT NULL ,
+moldable_job_id INT UNSIGNED NOT NULL ,
+start_time INT UNSIGNED NOT NULL ,
+PRIMARY KEY (sched_date,moldable_job_id)
+);
+
 #DROP TABLE IF EXISTS gantt_jobs_resources;
 CREATE TABLE IF NOT EXISTS gantt_jobs_resources (
 moldable_job_id INT UNSIGNED NOT NULL ,
@@ -242,6 +250,14 @@ CREATE TABLE IF NOT EXISTS gantt_jobs_resources_visu (
 moldable_job_id INT UNSIGNED NOT NULL ,
 resource_id INT UNSIGNED NOT NULL ,
 PRIMARY KEY (moldable_job_id,resource_id)
+);
+
+#DROP TABLE IF EXISTS gantt_jobs_resources_log;
+CREATE TABLE IF NOT EXISTS gantt_jobs_resources_log (
+sched_date INT UNSIGNED NOT NULL ,
+moldable_job_id INT UNSIGNED NOT NULL ,
+resource_id INT UNSIGNED NOT NULL ,
+PRIMARY KEY (sched_date,moldable_job_id,resource_id)
 );
 
 #DROP TABLE IF EXISTS files;
