@@ -44,6 +44,9 @@ upstream development version:
   - Bug #5518: add right initialization of the job user name.
   - Now reservations are scheduled only once (at submission time). So resources
     for a reservation cannot change in the time.
+  - Add 2 new tables to keep scheduling decisions log
+    (gantt_jobs_predictions_log and gantt_jobs_resources_log). This will help
+    to debug scheduling troubles
 
 version 2.2.12:
 ---------------
